update css and html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
   <title>HW Wireframe</title>
   <meta name="description" content="">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="float-style.css">
 </head>
 
+<!-- <body> close
+    <div class="container">
+        <header>Header</header>
+        <nav>Nav</nav>
+        <div class="clearfix">
+          <section>section
+            <article>article</article>
+            <header>h1, h2, h3</header>
+            <paragraph>paragraph</paragraph>
+          </section>          
+          <aside id="aside">aside</aside>
+        </div>
+        <footer>Footer</footer>
+      </div>    
+</body>
+-->
 <body>
+    <div class="container">
+        <header>Header</header>
+        <nav>Nav</nav>
+        <div class="clearfix">
+          <section>section
+            <article>article</article>
+            <header>h1, h2, h3</header>
+            <paragraph>paragraph</paragraph>
+          </section>          
+          <aside id="aside">aside</aside>
+        </div>
+        <footer>Footer</footer>
+      </div>    
 </body>
 
 </html>
